RESOLVED FIXED34711
WebKit/chromium: Custom context menu does not work in inspector.
https://bugs.webkit.org/show_bug.cgi?id=34711
Summary WebKit/chromium: Custom context menu does not work in inspector.
Pavel Feldman
Reported 2010-02-08 10:40:41 PST
It used to work, but it does not anymore.
Attachments
[PATCH] Proposed fix. (1.28 KB, patch)
2010-02-08 10:48 PST, Pavel Feldman
no flags
Pavel Feldman
Comment 1 2010-02-08 10:48:22 PST
Created attachment 48343 [details] [PATCH] Proposed fix.
WebKit Commit Bot
Comment 2 2010-02-08 15:27:18 PST
Comment on attachment 48343 [details] [PATCH] Proposed fix. Clearing flags on attachment: 48343 Committed r54515: <http://trac.webkit.org/changeset/54515>
WebKit Commit Bot
Comment 3 2010-02-08 15:27:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.