2010-02-08  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by David Levin.

        WebKit/chromium: Custom context menu does not work in inspector.
        https://bugs.webkit.org/show_bug.cgi?id=34711

        * src/WebDevToolsFrontendImpl.cpp:
        (WebKit::WebDevToolsFrontendImpl::jsShowContextMenu):

Canonical link: https://commits.webkit.org/45828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54515 268f45cc-cd09-0410-ab3c-d52691b4dbfc